# GISTBench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  pyproject.toml
gistbench/: __init__.py  cli.py  client.py  data.py  download.py  schema.py  store.py
gistbench/assets/: categories.csv  mock_dataset.json  mock_oracle.json  oracle_synthetic.json
gistbench/prompts/: __init__.py  interest_extraction.py
gistbench/steps/: __init__.py  interest_groundedness.py  interest_specificity.py  pipeline.py  scoring.py  taxonomy.py
gistbench/tests/: test_e2e.py  test_smoke.py
